--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <section id="scoreboard">
+    <p>Wins: <span class="wins-count">00</span></p>
+    <p>Loses: <span class="loses-count">00</span></p>
+  </section>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
